--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,1 +1,3 @@
 MONGO_URL=mongodb+srv://iamshivanggautam:test@capstone.plmr3o4.mongodb.net/?retryWrites=true&w=majority&appName=CAPSTONE
+JWT_SECRET=yourSecretKeyHere
+PORT=5000
